fix: Wrap container query in not print mq
Don't apply the container query type when in print mode

--- a/packages/components/styles/foundation/_reset.css
+++ b/packages/components/styles/foundation/_reset.css
@@ -10,10 +10,13 @@
   Styles to minimise breaking changes when migrating from viewport queries to container queries::after
 
   - `container-type` provides a global container query parent that is used if consumers don't have their own parent.
+    It is excluded from print media to avoid layout issues.
   - `min-height` is applied because styles like `background-color` are applied to the `html` element by default.
     When applying `container-type` stops being the case.
 */
-body {
-  container-type: inline-size;
-  min-height: 100vh;
+@media not print {
+  body {
+    container-type: inline-size;
+    min-height: 100vh;
+  }
 }
